# micro_6502

./: Cargo.toml  readme.md
examples/: fibonacci.asm
src/: args.rs  bus.rs  decoder.rs  emulator.rs  instruction.rs  lib.rs  main.rs  mem.rs  readwritable.rs  regs.rs
