[package]
name = "micro_6502"
version = "1.1.0"
edition = "2021"

[features]
build-binary = ["clap"]

[lib]
name = "micro_6502"
path = "src/lib.rs"

[[bin]]
name = "micro_6502"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[dependencies]
bitflags = "2.5.0"
strum_macros = "0.25.2"
clap = { version = "4.5.4", features = ["derive"], optional = true }
